--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-  overscroll-behavior: auto;
+  overscroll-behavior: contain;;
 }
 
 body {
@@ -82,9 +82,9 @@ ol {
 }
 
 #scrolly-video {
-  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .scroll-downs {
@@ -102,7 +102,7 @@ ol {
   width: 3px;
   padding: 10px 15px;
   height: 35px;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
   border-radius: 25px;
   opacity: 0.75;
   box-sizing: content-box;
