--- a/style.css
+++ b/style.css
@@ -45,10 +45,8 @@ ol {
 
 .boxdashed {
   padding: 5em 1.5em;
-  background-repeat: repeat, repeat-x; 
+  background: linear-gradient(90deg, #000, #655641);
   
-  background: linear-gradient(black, #655641);
-  background-blend-mode: luminosity;
 }
 
 /*=============== スクロールアニメーション =================*/
