--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ol {
 
 .boxdashed {
   padding: 5em 1.5em;
-  background: linear-gradient(90deg, #000, #655641);
+  background: linear-gradient(#000, #655641);
   
 }
 
@@ -478,77 +478,6 @@ div.foo{
   height:100%;
 }
 
-.circular{
-  height:100px;
-  width: 100px;
-  position: relative;
-  transform:scale(2);
-}
-
-.circular .inner{
-  position: absolute;
-  z-index: 6;
-  top: 50%;
-  left: 50%;
-  height: 80px;
-  width: 80px;
-  margin: -40px 0 0 -40px;
-  background: #000;
-  border-radius: 100%;
- 
-}
-.circular .number{
-  position: absolute;
-  top:50%;
-  left:50%;
-  transform: translate(-50%, -50%);
-  z-index:10;
-  
-}
-.circular .bar{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: #fff;
-  border-radius: 100%;
-  clip: rect(0px, 100px, 100px, 50px);
-}
-
-.text {
-  width: 50px;
-  padding-top: 300px;
-}
-.circle .bar .progress{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  border-radius: 100%;
-  clip: rect(0px, 50px, 100px, 0px);
-  background: orange;
-}
-.circle .left .progress{
-  z-index:1;
-  animation: left 4s linear both;
-}
-@keyframes left{
-  100%{
-    transform: rotate(180deg);
-  }
-}
-.circle .right {
-  transform: rotate(180deg);
-  z-index:3;
- 
-}
-.circle .right .progress{
-  animation: right 3s linear both;
-  animation-delay:4s;
-}
-@keyframes right{
-  100%{
-    transform: rotate(90deg);
-  }
-}
 
 /*=============== pagetopボタン =================*/
 
@@ -567,11 +496,6 @@ div.foo{
   z-index: 500;
 }
 
-.square {
-  height: 200px;
-  width: 200px;
-  background: #0bd;
-}
 
 
 /*=============== footer =================*/
