--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ html {
 }
 
 body {
-  
   font-family: 'Zen Maru Gothic', serif;
   color: #fff;
 }
@@ -45,7 +44,7 @@ ol {
 }
 
 .boxdashed {
-  padding: 5em 1.5em;
+  padding: 5rem 1.5em;
   background: linear-gradient(#000, #655641);
   
 }
@@ -119,70 +118,8 @@ div.foo{
   text-align: center;
 }
 .letter{
-  display: inline-block;
-  font-weight: 900;
-  font-size: 2em;
-  margin: 0.2em;
-  position: relative;
-  color: #565656;
-  transform-style: preserve-3d;
-  perspective: 400;
-  z-index: 1;
-}
-.letter:before, .letter:after{
-  position:absolute;
-  content: attr(data-letter);
-  transform-origin: top left;
-  top:0;
-  left:0;
-}
-.letter, .letter:before, .letter:after{
-  transition: all 0.2s ease-in-out;
-}
-.letter:before{
-  color: #fff;
-  text-shadow: 
-    -1px 0px 1px rgba(255,255,255,.8),
-    1px 0px 1px rgba(0,0,0,.8);
-  z-index: 3;
-  transform:
-    rotateX(0deg)
-    rotateY(-15deg)
-    rotateZ(0deg);
-}
-.letter:after{
-  color: rgba(0,0,0,.11);
-  z-index:2;
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(0deg)
-    rotateZ(0deg)
-    skew(0deg,1deg);
-}
-.letter:hover:before{
-  color: #fafafa;
-  transform:
-    rotateX(0deg)
-    rotateY(-40deg)
-    rotateZ(0deg);
-}
-.letter:hover:after{
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(40deg)
-    rotateZ(0deg)
-    skew(0deg,22deg);
-}
-
-.title__img1 {
-  box-shadow:
-    10px -10px 25px rgba(253, 236, 182, 0.7)
-}
-.title__img2 {
-  box-shadow:
-    -10px -10px 25px rgba(253, 236, 182, 0.7)
+  font-family: 'Lobster';
+  font-size: 4rem;
 }
 
 /*=============== フェードイン =================*/
