--- a/style.css
+++ b/style.css
@@ -122,6 +122,108 @@ div.foo{
   font-size: 4rem;
 }
 
+
+/*-------------------------------------
+1文字ずつ出てくる
+-------------------------------------*/
+
+.about-heading span {
+  display: inline-block;
+  opacity: 0;
+}
+
+.about-heading span.active {
+  animation: copy-anime 1s forwards;
+}
+
+.about-heading span:nth-child(2).active {
+  animation-delay: 0.1s
+}
+
+.about-heading span:nth-child(3).active {
+  animation-delay: 0.2s
+}
+
+.about-heading span:nth-child(4).active {
+  animation-delay: 0.3s
+}
+
+.about-heading span:nth-child(5).active {
+  animation-delay: 0.4s
+}
+
+.about-heading span:nth-child(6).active {
+  animation-delay: 0.5s
+}
+
+.about-heading span:nth-child(7).active {
+  animation-delay: 0.6s
+}
+
+.about-heading span:nth-child(9).active {
+  animation-delay: 0.7s
+}
+
+.about-heading span:nth-child(10).active {
+  animation-delay: 0.8s
+}
+
+.about-heading span:nth-child(11).active {
+  animation-delay: 0.9s
+}
+
+.about-heading span:nth-child(12).active {
+  animation-delay: 1s
+}
+
+.about-heading span:nth-child(13).active {
+  animation-delay: 1.1s
+}
+
+.about-heading span:nth-child(14).active {
+  animation-delay: 1.2s
+}
+
+.about-heading span:nth-child(15).active {
+  animation-delay: 1.3s
+}
+
+.about-heading span:nth-child(16).active {
+  animation-delay: 1.4s
+}
+
+.about-heading span:nth-child(17).active {
+  animation-delay: 1.5s
+}
+
+.about-heading span:nth-child(18).active {
+  animation-delay: 1.6s
+}
+
+.about-heading span:nth-child(19).active {
+  animation-delay: 1.7s
+}
+
+.about-heading span:nth-child(20).active {
+  animation-delay: 1.8s
+}
+
+.about-heading span:nth-child(21).active {
+  animation-delay: 1.9s
+}
+
+@keyframes copy-anime {
+  0% {
+      opacity: 0;
+      transform: scale(1.3);
+  }
+
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
+}
+
 /*=============== フェードイン =================*/
 
 .fadein {
