--- a/style.css
+++ b/style.css
@@ -310,8 +310,7 @@ div.foo{
 }
 
 .modal-text {
-  padding-top: 1rem;
-  padding-left: 1rem;
+  padding: 1rem;
 }
 
 .modal-left {
@@ -319,6 +318,8 @@ div.foo{
 }
 
 .modal-text span {
+  font-size: 1.5rem;
+  padding: 1rem;
   font-weight: bold;
 }
 
